test: 가계부 수정 작성 화면 테스트 추가 - GET /ledgers/{code}/edit 수정 화면 요청 컨트롤러 테스트 추가 - 특정 가계부 정보 조회 서비스 로직 테스트 추가 - 이미지 슬롯 생성 테스트 추가 - 테스트에 필요한 fixture 클래스 추가